keep isSessionActive as true after global checkpoint error

--- a/server/routerlicious/packages/services-core/package.json
+++ b/server/routerlicious/packages/services-core/package.json
@@ -102,6 +102,9 @@
 			},
 			"ClassDeclaration_MongoDocumentRepository": {
 				"forwardCompat": false
+			},
+			"EnumDeclaration_LambdaCloseType": {
+				"backCompat": false
 			}
 		}
 	}
